--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -46,17 +46,22 @@ img {
 
 .gallery4 {
     width: 10.99em;
-    margin-bottom: 3px;
+    margin-bottom: 19px;
 }
 
 .gallery3 {
     width: 14.8em;
-    margin-bottom: 3px;
+    margin-bottom: 19px;
 }
 
 .gallery2 {
     width: 22.3em;
-    margin-bottom: 3px;
+    margin-bottom: 19px;
+}
+
+.gallery1 {
+    width: 45em;
+    margin-bottom: 19px;
 }
 
 p {
@@ -99,4 +104,28 @@ li {
 li:before {
     content: "\002022  ";
     color: grey;
+}
+
+.definitions{
+    font-size: 10pt;
+    color: rgb(70, 70, 70);
+    margin-bottom: 19px;
+
+}
+
+table.definitions td{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e4e4e4;
+}
+
+table.definitions .key{
+    padding-left: 1em;
+    color: #000000;
+    text-align: left;
+    font-weight: 600;
+}
+table.definitions .value{
+    text-align: left;
+    padding-left: 20px;
 }
