--- a/style/layout.css
+++ b/style/layout.css
@@ -39,17 +39,15 @@ body{
 	font-style : italic;
 }
 
-#left_panel{
+#side_menu {
 	box-sizing : border-box;
 	position : fixed;
 	top : 0px;
 	width : 400px;
 	height : 100%;
-	//border : 1px solid black;
 	min-width : 220px;
 	background-color : rgb(150, 0, 132);
 	color : white;
-
 }
 
 #right_panel{
@@ -59,12 +57,12 @@ body{
 	top : 0px;
 	bottom : 0px;
 	width : calc(100% - 400px);
-	
+
 	//background-color : cyan;
 	//border : 1px solid red;
 	//min-width : calc(100% - 220px);
 
-	
+
 }
 
 #right_panel a{
@@ -78,19 +76,15 @@ body{
 	margin-right: auto;
 	position: relative;
 	width: 200px;
-
 }
 
 #menu div{
 	height : 50px;
-	//margin-left : 30px;
 	text-align : center;
 	color : black;
 	font-size : 20pt;
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	font-weight : 200;
-	text-decoration: none;
-	
 }
 
 #menu div a{
