--- a/style/layout.css
+++ b/style/layout.css
@@ -78,21 +78,6 @@ body{
 	color : white;
 }
 
-#top_menu {
-    box-sizing : border-box;
-    position : fixed;
-    top : 0px;
-    width : 100%;
-    height : 50px;
-    min-height : 30px;
-    background-color : rgb(150, 0, 132);
-    color : white;
-}
-
-#mobile_title {
-    color:white;
-}
-
 #right_panel{
 	box-sizing : border-box;
 
@@ -131,15 +116,35 @@ body{
 }
 
 #top_menu {
-    text-align: center;
+    box-sizing : border-box;
+    position : fixed;
+    top : 0px;
+    width : 100%;
+    height : 50px;
+    min-height : 30px;
+    background-color : rgb(150, 0, 132);
 }
+
 
 #top_menu #hamburger_menu {
     position: absolute;
     left : 10px;
 }
 
+#hamburger_menu img {
+    height: 50px;
+}
+
 #top_menu #mobile_title {
-   margin-left : auto;
-   margin-right : auto;
+    width: 100%;
+    height: 100%;
+
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-size : 16pt;
+    color:black;
+
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 50px;
 }
