--- a/style/layout.css
+++ b/style/layout.css
@@ -121,7 +121,7 @@ body{
     position : fixed;
     top : 0px;
     width : 100%;
-    height : 50px;
+    height : 10mm;
     min-height : 30px;
     background-color : rgb(150, 0, 132);
     z-index: 1;
@@ -134,7 +134,7 @@ body{
 }
 
 #hamburger_menu img {
-    height: 50px;
+    height: 10mm;
 }
 
 #top_menu #mobile_title {
@@ -148,5 +148,5 @@ body{
     text-align: center;
     display: inline-block;
     vertical-align: middle;
-    line-height: 50px;
+    line-height: 10mm;
 }
