--- a/style/global.less
+++ b/style/global.less
@@ -7,3 +7,5 @@
 
 @menu-item-text-color : white;
 @menu-item-text-color-selected : black;
+
+@menu-font : "Open Sans", Helvetica, Arial, sans-serif;
