--- a/style/index.less
+++ b/style/index.less
@@ -2,7 +2,11 @@
   max-width: 800px;
   min-width: 400px;
   height: 100%;
+
+  div {
+    margin-bottom: 38px;
+  }
 }
-#about div {
-  margin-bottom: 38px;
-}
+
+
+
