--- a/style/layout.less
+++ b/style/layout.less
@@ -60,7 +60,7 @@ body {
       width: 200px;
       margin-left: auto;
       margin-right: auto;
-      font-family: "Open Sans", Helvetica, Arial, sans-serif;
+      font-family: @menu-font;
       text-align: center;
       line-height: 1.5em;
 
@@ -87,7 +87,7 @@ body {
       text-align: center;
       color: @menu-item-text-color-selected;
       font-size: 20pt;
-      font-family: "Open Sans", Helvetica, Arial, sans-serif;
+      font-family: @menu-font;
       a {
         text-decoration: none;
         color: @menu-item-text-color;
@@ -117,7 +117,7 @@ body {
     width: 100%;
     height: 100%;
 
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-family: @menu-font;
     font-size: 16pt;
     color: black;
 
@@ -129,13 +129,20 @@ body {
 }
 
 #right_panel {
-  box-sizing: border-box;
+  position: relative;
 
+  box-sizing: border-box;
+  padding: 100px;
   top: 0px;
   bottom: 0px;
 
   width: calc(100% - @side-menu-width);
   min-width: @max-article-text-width;
+
+  font-family: "Open Sans", Arial, sans-serif;
+  color: black;
+  font-size: 12pt;
+  line-height: 19px;
 
   a {
     text-decoration: none;
