--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -27,11 +27,8 @@ h3 {
   width: 100%;
   height: 100%;
   font-size: 12pt;
-  margin-top: 37px;
-  margin-bottom: 100px;
   width: 46em;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 37px auto 100px;
 }
 .gallery4 {
   width: 11.3em;
@@ -91,18 +88,18 @@ p {
   color: #464646;
   margin-bottom: 19px;
 }
-table.definitions td {
+.definitions td {
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid #e4e4e4;
 }
-table.definitions .key {
+.definitions .key {
   padding-left: 1em;
   color: #000000;
   text-align: left;
   font-weight: 600;
 }
-table.definitions .value {
+.definitions .value {
   text-align: left;
   padding-left: 20px;
 }
