--- a/style/projects.less
+++ b/style/projects.less
@@ -1,105 +1,99 @@
 @import 'global';
 
-#about_projects{
-  height : 210px;
+#about_projects {
+  height: 210px;
+
+  p {
+    font-size: 1em;
+    font-weight: 400;
+    text-align: left;
+
+    font-family: "Open Sans", Arial, sans-serif;
+    color: black;
+    font-size: 12pt;
+    line-height: 19px;
+    margin-bottom: 19px;
+  }
 }
 
-#about_projects p{
-  font-size : 1em;
-  font-weight : 400;
-  text-align : left;
-
-  font-family: "Open Sans", Arial, sans-serif;
-  color: black;
-  font-size : 12pt;
-  line-height : 19px;
-  margin-bottom : 19px;
-}
-
-
-#projects_list{
-  //margin : 150px;
-  display : flex;
+#projects_list {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
-.project{
-  position : relative;
-  width : 200px;
-  height : 300px;
-  margin-right : 40px;
+.project {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  margin-right: 40px;
+
+  &:hover {
+    color: @primary-color;
+  }
 }
 
-.project:hover {
-  color : rgb(150, 0, 132);
-  //font-weight : 600;
+.project_thumbnail {
+  position: relative;
+  width: 200px;
+  height: 200px;
+
+  border: 1px solid @primary-color;
+  box-sizing: border-box;
+
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 }
 
-.project_thumbnail{
-  position : relative;
-  width : 200px;
-  height : 200px;
-
-  //background-color : grey;
-  border : 1px solid rgb(150, 0, 132);
-  box-sizing : border-box;
-}
-
-.project_thumbnail a{
-  display : block;
-  width : 100%;
-  height : 100%;
-  z-index : -1;
-}
-
-.project_thumbnail a img{
-  //width : 196px;
-  //height : 196px;
-}
-
-.project_title{
-  margin-top : 19px;
+.project_title {
+  margin-top: 19px;
   font-family: "Open Sans", Arial, sans-serif;
-  //color: black;
-  font-size : 12pt;
-  line-height : 19px;
+  font-size: 12pt;
+  line-height: 19px;
 }
 
 .overlay {
-  position : absolute;
-  top : 0px;
-  left : 0px;
-  width : 100%;
-  height : 100%;
-  background-color : rgb(150, 0, 132);
-  opacity : 0.9;
-  color : white;
-  visibility : hidden;
-  pointer-events : none;
-  display : table;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: @primary-color;
+  opacity: 0.9;
+  color: white;
+  visibility: hidden;
+  pointer-events: none;
+  display: table;
+
+  .topics {
+    position: relative;
+    top: -50%;
+    opacity: 1;
+
+    text-align: center;
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-size: 10pt;
+    font-variant: small-caps;
+
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    .topic {
+      margin-bottom: 5px;
+    }
+  }
 }
 
-.overlay_inner{
-  display : table-cell;
-  vertical-align : middle;
-  width : 100%;
-  position : static;
-}
-
-.overlay .topics {
-  position :  relative;
-  top :  -50%;
-  opacity : 1;
-
-  text-align : center;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-size : 10pt;
-  font-variant : small-caps;
-
-  margin: auto;
-  top: 0; left: 0; bottom: 0; right: 0;
-}
-.overlay .topics .topic{
-  margin-bottom : 5px;
+.overlay_inner {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  position: static;
 }
