--- a/style/education.css
+++ b/style/education.css
@@ -30,8 +30,11 @@ p {
   margin-left: 100px;
   width: 500px;
 }
-#books {
+#books_panel #books {
   margin-top: 19px;
+}
+#books_panel #books .book {
+  margin-bottom: 19px;
 }
 .details,
 .timeframe {
@@ -42,7 +45,7 @@ p {
   margin-left: 3px;
   width: 140px;
 }
-.title .title {
+.title {
   font-weight: 400;
   color: #960084;
 }
@@ -61,7 +64,7 @@ p {
 .school .circle {
   display: inline-block;
   position: absolute;
-  left: calc(-1.5em);
+  left: calc(-0.5em - 1px);
   background: white;
   width: 1em;
   height: 1em;
@@ -79,7 +82,4 @@ p {
 .author {
   color: grey;
   font-style: italic;
-}
-.book {
-  margin-bottom: 19px;
 }
