--- a/style/global.less
+++ b/style/global.less
@@ -9,3 +9,6 @@
 @menu-item-text-color-selected : black;
 
 @menu-font : "Open Sans", Helvetica, Arial, sans-serif;
+
+@padding-web : 100px;
+@padding-mobile : 20px;
