--- a/style/layout.css
+++ b/style/layout.css
@@ -24,6 +24,7 @@ body {
     display: none;
   }
   #right_panel {
+    margin-top: 10mm;
     margin-left: 0px;
     padding: 20px;
   }
@@ -103,13 +104,19 @@ body {
 #top_menu #mobile_title {
   width: 100%;
   height: 100%;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-size: 16pt;
-  color: black;
   text-align: center;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: baseline;
   line-height: 10mm;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+}
+#top_menu #mobile_title .name {
+  font-size: 12pt;
+  color: white;
+}
+#top_menu #mobile_title .title {
+  font-size: 10pt;
+  color: black;
 }
 #right_panel {
   position: relative;
