--- a/style/layout.less
+++ b/style/layout.less
@@ -32,6 +32,7 @@ body {
   }
 
   #right_panel {
+    margin-top : @top-menu-height;
     margin-left: 0px;
     padding: @padding-mobile;
   }
@@ -104,7 +105,7 @@ body {
   position: fixed;
   top: 0px;
   width: 100%;
-  height: 10mm;
+  height: @top-menu-height;
   min-height: 30px;
   background-color: rgb(150, 0, 132);
   z-index: 1;
@@ -119,14 +120,24 @@ body {
     width: 100%;
     height: 100%;
 
-    font-family: @menu-font;
-    font-size: 16pt;
-    color: black;
-
     text-align: center;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: baseline;
     line-height: 10mm;
+
+    font-family: @menu-font;
+
+    .name{
+      font-size: 12pt;
+      color: white;
+    }
+
+    .title{
+      font-size: 10pt;
+      color: black;
+    }
+
+
   }
 }
 
