--- a/style/layout.less
+++ b/style/layout.less
@@ -78,24 +78,25 @@ body {
       }
     }
   }
+}
 
-  #menu {
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    width: 200px;
-    div {
-      height: 50px;
-      text-align: center;
-      color: @menu-item-text-color-selected;
-      font-size: 20pt;
-      font-family: @menu-font;
-      a {
-        text-decoration: none;
-        color: @menu-item-text-color;
-        font-weight: 200;
-      }
+//this is reused in the top menu
+#menu {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 200px;
+  div {
+    height: 50px;
+    text-align: center;
+    color: @menu-item-text-color-selected;
+    font-size: 20pt;
+    font-family: @menu-font;
+    a {
+      text-decoration: none;
+      color: @menu-item-text-color;
+      font-weight: 200;
     }
   }
 }
