--- a/style/education.less
+++ b/style/education.less
@@ -19,23 +19,56 @@ p {
 }
 
 #introduction {
-  width: 1200px;
+  max-width: 1200px;
   margin-bottom: 19px;
 }
 
 #schools_panel, #books_panel {
   display: inline-block;
   vertical-align: top;
-  width: 600px;
+  max-width: 600px;
 }
 
 #schools {
   border-left: 1px solid grey;
+
+  .school {
+    margin-top: 19px;
+    margin-bottom: 19px;
+
+    position: relative;
+    padding-left: 10px;
+
+    .circle {
+      display: inline-block;
+      position: absolute;
+      left: ~"calc(-0.5em - 1px)";
+      background: white;
+      width: 1em;
+      height: 1em;
+      border-radius: 50%;
+      border: 1px solid grey;
+    }
+
+    .title {
+
+    }
+
+    .time {
+      font-size: 10pt;
+      color: grey;
+      -webkit-font-variant-numeric: onum;
+      -moz-font-variant-numeric: onum;
+      -moz-font-feature-settings: "onum=1";
+    }
+  }
 }
 
 #books_panel {
-  margin-left: 100px;
-  width: 500px;
+  @media screen and (min-width: @responsive-threshold) {
+    margin-left: 100px;
+    max-width: 500px;
+  }
 
   #books {
     margin-top: 19px;
@@ -65,37 +98,6 @@ p {
   width: 441px;
   .description {
     margin-top: 19px;
-  }
-}
-
-.school {
-  margin-top: 19px;
-  margin-bottom: 19px;
-
-  position: relative;
-  padding-left: 10px;
-
-  .circle {
-    display: inline-block;
-    position: absolute;
-    left: ~"calc(-0.5em - 1px)";
-    background: white;
-    width: 1em;
-    height: 1em;
-    border-radius: 50%;
-    border: 1px solid grey;
-  }
-
-  .title {
-
-  }
-
-  .time {
-    font-size: 10pt;
-    color: grey;
-    -webkit-font-variant-numeric: onum;
-    -moz-font-variant-numeric: onum;
-    -moz-font-feature-settings: "onum=1";
   }
 }
 
