--- a/style/projects.css
+++ b/style/projects.css
@@ -1,5 +1,7 @@
-#about_projects {
-  height: 210px;
+@media screen and (min-width: 768px) {
+  #about_projects {
+    height: 210px;
+  }
 }
 #about_projects p {
   font-size: 1em;
@@ -16,29 +18,39 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-.project {
+#projects_list .project {
   position: relative;
   width: 200px;
   height: 300px;
-  margin-right: 40px;
 }
-.project:hover {
+@media screen and (min-width: 768px) {
+  #projects_list .project {
+    margin-right: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #projects_list .project {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+#projects_list .project:hover {
   color: #960084;
 }
-.project_thumbnail {
+#projects_list .project .project_thumbnail {
   position: relative;
   width: 200px;
   height: 200px;
   border: 1px solid #960084;
   box-sizing: border-box;
 }
-.project_thumbnail a {
+#projects_list .project .project_thumbnail a {
   display: block;
   width: 100%;
   height: 100%;
   z-index: -1;
 }
-.project_title {
+#projects_list .project .project_title {
   margin-top: 19px;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 12pt;
