--- a/style/projects.less
+++ b/style/projects.less
@@ -1,7 +1,9 @@
 @import 'global';
 
 #about_projects {
-  height: 210px;
+  @media screen and (min-width: @responsive-threshold) {
+    height: 210px;
+  }
 
   p {
     font-size: 1em;
@@ -20,40 +22,48 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-}
 
-.project {
-  position: relative;
-  width: 200px;
-  height: 300px;
-  margin-right: 40px;
+  .project {
+    position: relative;
+    width: 200px;
+    height: 300px;
 
-  &:hover {
-    color: @primary-color;
+    @media screen and (min-width: @responsive-threshold) {
+      margin-right: 40px;
+    }
+    @media screen and (max-width: @responsive-threshold) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &:hover {
+      color: @primary-color;
+    }
+
+    .project_thumbnail {
+      position: relative;
+      width: 200px;
+      height: 200px;
+
+      border: 1px solid @primary-color;
+      box-sizing: border-box;
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+    }
+
+    .project_title {
+      margin-top: 19px;
+      font-family: "Open Sans", Arial, sans-serif;
+      font-size: 12pt;
+      line-height: 19px;
+    }
   }
-}
 
-.project_thumbnail {
-  position: relative;
-  width: 200px;
-  height: 200px;
-
-  border: 1px solid @primary-color;
-  box-sizing: border-box;
-
-  a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-}
-
-.project_title {
-  margin-top: 19px;
-  font-family: "Open Sans", Arial, sans-serif;
-  font-size: 12pt;
-  line-height: 19px;
 }
 
 .overlay {
