--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -27,23 +27,23 @@ h3 {
   width: 100%;
   height: 100%;
   font-size: 12pt;
-  width: 46em;
+  max-width: 46em;
   margin: 37px auto 100px;
 }
 .gallery4 {
-  width: 11.3em;
+  width: 23.5%;
   margin-bottom: 19px;
 }
 .gallery3 {
-  width: 15.1em;
+  width: 32%;
   margin-bottom: 19px;
 }
 .gallery2 {
-  width: 22.8em;
+  width: 49%;
   margin-bottom: 19px;
 }
 .gallery1 {
-  width: 46em;
+  width: 100%;
   margin-bottom: 19px;
 }
 .borderless_image {
