--- a/style/project_typography.less
+++ b/style/project_typography.less
@@ -14,7 +14,7 @@ h2 {
   font-variant: small-caps;
   letter-spacing: .12em;
   font-weight: 600;
-  color: rgb(150, 0, 132);
+  color: @primary-color;
 }
 
 h3 {
@@ -32,27 +32,27 @@ h3 {
   width: 100%;
   height: 100%;
   font-size: 12pt;
-  width: 46em;
+  max-width: @max-article-text-width;
   margin: 37px auto 100px;
 }
 
 .gallery4 {
-  width: 11.3em;
+  width: 23.5%;
   margin-bottom: 19px;
 }
 
 .gallery3 {
-  width: 15.1em;
+  width: 32%;
   margin-bottom: 19px;
 }
 
 .gallery2 {
-  width: 22.8em;
+  width: 49%;
   margin-bottom: 19px;
 }
 
 .gallery1 {
-  width: 46em;
+  width: 100%;
   margin-bottom: 19px;
 }
 
