--- a/style/project_typography.less
+++ b/style/project_typography.less
@@ -36,24 +36,26 @@ h3 {
   margin: 37px auto 100px;
 }
 
-.gallery4 {
-  width: 23.5%;
+.gallery {
+  font-size: 0pt;
   margin-bottom: 19px;
-}
 
-.gallery3 {
-  width: 32%;
-  margin-bottom: 19px;
-}
+  .gallery1 {
+    width: 100%;
+  }
 
-.gallery2 {
-  width: 49%;
-  margin-bottom: 19px;
-}
+  .gallery2 {
+    width: 50%;
+  }
 
-.gallery1 {
-  width: 100%;
-  margin-bottom: 19px;
+  .gallery3 {
+    width: 33.3%;
+  }
+
+  .gallery4 {
+
+    width: 25%;
+  }
 }
 
 .borderless_image {
