--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -39,12 +39,18 @@ h3 {
 }
 .gallery .gallery2 {
   width: 50%;
+  border: 4px solid white;
+  box-sizing: border-box;
 }
 .gallery .gallery3 {
   width: 33.3%;
+  border: 3px solid white;
+  box-sizing: border-box;
 }
 .gallery .gallery4 {
   width: 25%;
+  border: 2px solid white;
+  box-sizing: border-box;
 }
 .borderless_image {
   border: 1px #e2e2e2 solid;
