--- a/style/layout.less
+++ b/style/layout.less
@@ -20,6 +20,9 @@ body {
     margin-left: @side-menu-width;
     padding: @padding-web;
   }
+  #right_panel.project{
+    padding: 0px;
+  }
 }
 
 @media screen and (max-width: @responsive-threshold) {
