fixed cross domain and calc() issues

--- a/style/layout.less
+++ b/style/layout.less
@@ -153,6 +153,8 @@ body {
   bottom: 0px;
 
   width: calc(100% - @side-menu-width);
+  width: -webkit-calc(100% - @side-menu-width);
+  width: -moz-calc(100% - @side-menu-width);
 
   font-family: "Open Sans", Arial, sans-serif;
   color: black;
