--- a/style/layout.css
+++ b/style/layout.css
@@ -126,7 +126,9 @@ body {
   box-sizing: border-box;
   top: 0px;
   bottom: 0px;
-  width: calc(-300%);
+  width: calc(100% - 400px);
+  width: -webkit-calc(100% - 400px);
+  width: -moz-calc(100% - 400px);
   font-family: "Open Sans", Arial, sans-serif;
   color: black;
   font-size: 12pt;
