--- a/style/layout.css
+++ b/style/layout.css
@@ -12,6 +12,9 @@ body {
     display: block;
   }
   #right_panel {
+    width: calc(100% - 400px);
+    width: -webkit-calc(100% - 400px);
+    width: -moz-calc(100% - 400px);
     margin-left: 400px;
     padding: 100px;
   }
@@ -27,6 +30,7 @@ body {
     display: none;
   }
   #right_panel {
+    width: 100%;
     margin-top: 10mm;
     margin-left: 0px;
     padding: 20px;
@@ -126,7 +130,6 @@ body {
   box-sizing: border-box;
   top: 0px;
   bottom: 0px;
-  width: calc(-300%);
   font-family: "Open Sans", Arial, sans-serif;
   color: black;
   font-size: 12pt;
