p value article draft with images

--- a/style/project_typography.less
+++ b/style/project_typography.less
@@ -40,6 +40,12 @@ h3 {
   font-size: 0pt;
   margin-bottom: 19px;
 
+  .gallery1center {
+    display: block;
+    margin-left : auto;
+    margin-right : auto;
+  }
+
   .gallery1 {
     width: 100%;
   }
