--- a/style/education.less
+++ b/style/education.less
@@ -113,7 +113,14 @@ p {
   }
 }
 
+.annotation::before{
+  content : " - ";
+}
+
 .degree, .author {
   color: grey;
-  font-style: italic;
+  font-style: normal;
+  font-variant: small-caps;
+  font-size : 16pt;
+  text-transform: lowercase;
 }
