--- a/style/layout.less
+++ b/style/layout.less
@@ -120,9 +120,9 @@ body {
   z-index: 1;
   #hamburger_menu {
     position: absolute;
-    left: 10px;
     img {
-      height: 10mm;
+      height: 24px;
+      padding : 12px;
     }
   }
   #mobile_title {
@@ -132,7 +132,7 @@ body {
     text-align: center;
     display: inline-block;
     vertical-align: baseline;
-    line-height: 10mm;
+    line-height: @top-menu-height;
 
     font-family: @menu-font;
 
@@ -142,11 +142,9 @@ body {
     }
 
     .title{
-      font-size: 10pt;
-      color: black;
+      font-size: 12pt;
+      color: #B9B9B9;
     }
-
-
   }
 }
 
