updated education content

--- a/style/global.less
+++ b/style/global.less
@@ -3,11 +3,12 @@
 @max-article-text-width : 46em;
 @responsive-threshold : 1000px;
 @name-text-color : white;
-@statement-text-color : black;
+@statement-text-color : #bababa;
 
-@menu-item-text-color : white;
-@menu-item-text-color-selected : black;
+@menu-item-text-color :  #bababa;
+@menu-item-text-color-selected : white;
 
+@summary-font : 'Crimson Text', serif;
 @menu-font : "Open Sans", Helvetica, Arial, sans-serif;
 
 @padding-web : 100px;
