--- a/style/layout.less
+++ b/style/layout.less
@@ -71,12 +71,13 @@ body {
       width: 200px;
       margin-left: auto;
       margin-right: auto;
-      font-family: @menu-font;
+      font-family: @summary-font;
       text-align: center;
       line-height: 1.5em;
 
       #name {
         font-size: 16pt;
+        font-family: @menu-font;
         color: @name-text-color;
       }
 
@@ -99,7 +100,7 @@ body {
     height: 50px;
     text-align: center;
     color: @menu-item-text-color-selected;
-    font-size: 20pt;
+    font-size: 18pt;
     font-family: @menu-font;
     a {
       text-decoration: none;
