--- a/style/layout.css
+++ b/style/layout.css
@@ -60,17 +60,18 @@ body {
   width: 200px;
   margin-left: auto;
   margin-right: auto;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: 'Crimson Text', serif;
   text-align: center;
   line-height: 1.5em;
 }
 #side_menu #photo_container #summary #name {
   font-size: 16pt;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   color: white;
 }
 #side_menu #photo_container #summary #statement {
   font-style: italic;
-  color: black;
+  color: #bababa;
 }
 #menu {
   margin-top: 50px;
@@ -82,13 +83,13 @@ body {
 #menu div {
   height: 50px;
   text-align: center;
-  color: black;
-  font-size: 20pt;
+  color: white;
+  font-size: 18pt;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 #menu div a {
   text-decoration: none;
-  color: white;
+  color: #bababa;
   font-weight: 200;
 }
 #top_menu {
