--- a/style/projects.less
+++ b/style/projects.less
@@ -2,7 +2,7 @@
 
 #about_projects {
   @media screen and (min-width: @responsive-threshold) {
-    height: 210px;
+    min-height: 210px;
   }
 
   p {
