--- a/style/education.less
+++ b/style/education.less
@@ -82,9 +82,9 @@ p {
 }
 
 #books_panel {
-  @media screen and (min-width: @responsive-threshold) {
+  @media screen and (min-width: 1700px) {
     margin-left: 100px;
-    max-width: 500px;
+    //max-width: 500px;
   }
 
   #books {
