--- a/style/layout.less
+++ b/style/layout.less
@@ -58,13 +58,21 @@ body {
   #photo_container {
     position: relative;
     width: 100%;
-    height: 300px;
+    @media screen and (min-height: 650px) {
+      height: 300px;
+    }
+    margin: 100px auto 10px;
 
     #profile_photo {
       position: relative;
       width: 200px;
       display: block;
-      margin: 100px auto 10px;
+      @media screen and (max-height: 650px) {
+        display: none;
+      }
+
+      margin-left: auto;
+      margin-right: auto;
     }
 
     #summary {
