multi overlay more images and quotes

--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -125,7 +125,7 @@ p {
   font-family: Georgia,Georgia,serif;
   font-style: italic;
   line-height: 1.4em;
-  float: right;
+  float: left;
   margin-bottom: 19px;
   margin-left: 1em;
   padding-left: 1em;
