--- a/style/project_typography.css
+++ b/style/project_typography.css
@@ -56,21 +56,19 @@ h3 {
   width: 100%;
 }
 .gallery .gallery2 {
-  width: calc(50% - 10px);
+  width: calc((100% - 10px) / 2);
   box-sizing: border-box;
 }
 .gallery .gallery3 {
-  width: 33.3%;
-  border: 3px solid white;
+  width: calc((100% - (2 * 10px)) / 3);
   box-sizing: border-box;
 }
 .gallery .gallery4 {
-  width: 25%;
-  border: 2px solid white;
+  width: calc((100% - (3 * 10px)) / 4);
   box-sizing: border-box;
 }
-.borderless_image {
-  border: 1px #e2e2e2 solid;
+.gallery_separator {
+  height: 10px;
 }
 p {
   font-size: 1em;
